# flet-circular-slider

./: .gitignore  LICENSE  PROGRESS.md  PUBLISHING.md  README.md  TESTING_NOTES.md  TROUBLESHOOTING.md  build.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: FletCircularSlider.md  index.md
examples/: advanced.py  basic.py  duration_picker.py  feature_demo.py  live_dashboard.py  main.py  perf_demo.py  pyproject.toml  serve_web.py  verify_labels.py
flet_circular_slider/: README.md  pyproject.toml
flet_circular_slider/src/flet_circular_slider/: flet_circular_slider.py
flet_circular_slider/src/flutter/flet_circular_slider/: pubspec.yaml
flet_circular_slider/src/flutter/flet_circular_slider/lib/: flet_circular_slider.dart
flet_circular_slider/src/flutter/flet_circular_slider/lib/src/: flet_circular_slider.dart
insights/: errors.md  flet-run-vs-build-extensions.md  performance-fixes.md
src/flet_circular_slider/: __init__.py  flet_circular_slider.py
src/flutter/flet_circular_slider/: pubspec.yaml
src/flutter/flet_circular_slider/lib/src/: extension.dart  flet_circular_slider.dart
