[project]
name = "flet-circular-slider-demo"
version = "0.1.0"
description = "Demo app for flet-circular-slider"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.80.5",
    "flet-circular-slider",
]

[tool.flet.app]
exclude = ["flet_circular_slider"]

[tool.flet.dev_packages]
flet-circular-slider = "flet_circular_slider"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
