[project]
name = "flet-circular-slider"
version = "0.6.1"
description = "Circular/radial slider control for Flet, wrapping sleek_circular_slider Flutter package"
authors = [
    { name = "Alex Stoica" }
]
license = "MIT"
readme = "../README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flet>=0.80.5",
]

[project.urls]
Repository = "https://github.com/alex-stoica/flet-circular-slider"

[tool.hatch.build.targets.wheel]
packages = ["src/flet_circular_slider", "src/flutter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
